syntax = "proto3";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "go-gateway/app/app-svr/archive/middleware/v1/preload.proto";

package bilibili.app.interface.v1;
option go_package          = "history";
option java_multiple_files = true;
option java_package        = "com.bilibili.grpc.app.interfaces.v1";
option objc_class_prefix   = "BAPIInterfaceV1History";

// History 历史记录
service History {
    // 历史记录tab
    rpc HistoryTab(HistoryTabReq) returns (HistoryTabReply);
    // 历史记录列表
    rpc Cursor(CursorReq) returns (CursorReply);
    // 历史记录列表V2，6.9.0版本之后
    rpc CursorV2(CursorV2Req) returns (CursorV2Reply);
    // 历史记录tabv2 6.29版本之后使用
    rpc HistoryTabV2(HistoryTabReq) returns (HistoryTabReply);
    // 历史记录删除
    rpc Delete(DeleteReq) returns (NoReply);
    // 历史记录搜索
    rpc Search(SearchReq) returns (SearchReply);
    // 清空历史记录
    rpc Clear(ClearReq) returns (NoReply);
    // 获取最新的历史记录
    rpc LatestHistory(LatestHistoryReq) returns (LatestHistoryReply);
}

// HistoryTabReq 历史记录列表请求参数
message HistoryTabReq {
    // 1.搜索列表，入参是当前定位到的tab
    // 2.普通列表，不需要传此参数
    // 业务类型（视频-archive 直播-live 专栏-article 商品-goods 展演-show）
    string business = 1;
    // 查询请求来源
    HistorySource source = 2;
    // 搜索关键词,搜索时需传
    string keyword = 3;
}

// CursorReply 历史记录列表返回值
message HistoryTabReply {
    // 顶部tab
    repeated CursorTab tab = 1;
}

// 搜索历史记录来源
enum HistorySource {
    // 主站历史记录页
    history = 0;
    // 会员购浏览记录
    shopping = 1;
}

// CursorReq 历史记录列表请求参数
message CursorReq {
    // 翻页游标（透传上页结果返回）
    Cursor cursor = 1;
    // 业务类型（全部-all 视频-archive 直播-live 专栏-article）
    string business = 2;
    //秒开参数
    PlayerPreloadParams player_preload = 3;
    // 秒开用
    .bilibili.app.archive.middleware.v1.PlayerArgs player_args = 4;
}

// CursorReply 历史记录列表返回值
message CursorReply {
    // 卡片内容
    repeated CursorItem items = 1;
    // 顶部tab
    repeated CursorTab tab = 2;
    // 翻页游标
    Cursor cursor = 3;
    // 是否还有更多数据
    bool has_more = 4;
}

// CursorReq 历史记录列表请求参数
message CursorV2Req {
    // 翻页游标（透传上页结果返回）
    Cursor cursor = 1;
    // 业务类型（视频-archive 直播-live 专栏-article 商品-goods 展演-show）
    string business = 2;
    //秒开参数
    PlayerPreloadParams player_preload = 3;
    // 秒开用
    .bilibili.app.archive.middleware.v1.PlayerArgs player_args = 4;
    //是否选择本机的播放历史
    bool is_local = 5;
}

// CursorReply 历史记录列表返回值
message CursorV2Reply {
    // 卡片内容
    repeated CursorItem items = 1;
    // 翻页游标
    Cursor cursor = 2;
    // 是否还有更多数据
    bool has_more = 3;
    // 空页面的跳转链接
    string empty_link = 4;
}

// CursorItem 历史记录卡片内容
message CursorItem {
    oneof card_item {
        CardUGC card_ugc         = 1;
        CardOGV card_ogv         = 2;
        CardArticle card_article = 3;
        CardLive card_live       = 4;
        CardCheese card_cheese   = 5;
    }
    // 标题
    string title = 6;
    // 跳转链接
    string uri = 7;
    // 观看时间
    int64 view_at = 8;
    // 历史记录主键（删除传递）
    int64 kid = 9;
    // 业务id（如稿件aid，直播room_id等）
    int64 oid = 10;
    // 业务类型
    string business = 11;
    // 业务类型
    int32 tp = 12;
    // 播放设备
    DeviceType dt = 13;
    // 是否有分享按钮
    bool has_share = 14;
}

// CardUGC ugc卡片
message CardUGC {
    // 封面
    string cover = 1;
    // 观看进度
    int64 progress = 2;
    // 时长
    int64 duration = 3;
    // up名称
    string name = 4;
    // up mid
    int64 mid = 5;
    // 是否展示关注按钮
    bool display_attention = 6;
    // 历史观看视频id
    int64 cid = 7;
    // 多p视频的第几p（单p视频不返回）
    int32 page = 8;
    // 多p视频的分集标题
    string subtitle = 9;
    // 新关注组件
    Relation relation = 10;
    // bvid
    string bvid = 11;
    // 稿件分p数
    int64 videos = 12;
    // 短链地址
    string short_link = 13;
    // 分享subtitle
    string share_subtitle = 14;
    // 播放量
    int64 view = 15;
    // 稿件状态
    int64 state = 16;
    //角标
    string badge = 17;
}

// CardOGV ogv卡片
message CardOGV {
    // 封面
    string cover = 1;
    // 观看进度
    int64 progress = 2;
    // 时长
    int64 duration = 3;
    // 番剧卡分集标题
    string subtitle = 4;
    // 角标
    string badge = 5;
    // 稿件状态
    int64 state = 6;
}

// CardArticle 专栏卡片
message CardArticle {
    // 封面
    repeated string covers = 1;
    // up名称
    string name = 2;
    // up mid
    int64 mid = 3;
    // 是否展示关注按钮
    bool display_attention = 4;
    // 角标
    string badge = 5;
    // 新关注组件
    Relation relation = 6;
}

// CardLive 直播卡片
message CardLive {
    // 封面
    string cover = 1;
    // up名称
    string name = 2;
    // up mid
    int64 mid = 3;
    // tag名称
    string tag = 4;
    // 直播状态
    int32 status = 5;
    // 是否展示关注按钮
    bool display_attention = 6;
    // 新关注组件
    Relation relation = 7;
}

// CardCheese 付费课程卡片
message CardCheese {
    // 封面
    string cover = 1;
    // 观看进度
    int64 progress = 2;
    // 时长
    int64 duration = 3;
    // 付费课程分集标题
    string subtitle = 4;
    // 稿件状态
    int64 state = 5;
}

// CursorTab 历史记录顶部tab
message CursorTab {
    // 业务类型
    string business = 1;
    // 业务名称
    string name = 2;
    // 客户端router地址
    string router = 3;
    // tab定位
    bool focus = 4;
}

// Cursor 历史记录游标
message Cursor {
    // 本页最大值游标值（透传历史记录服务）
    int64 max = 1;
    // 本页最大值游标类型（透传历史记录服务）
    int32 max_tp = 2;
}

// DeleteReq 历史记录删除请求参数
message DeleteReq {
    // 要删除的历史信息
    repeated HisInfo his_info = 1;
}

// HisInfo 历史记录信息
message HisInfo {
    // 业务类型
    string business = 1;
    // 历史主键id
    int64 kid = 2;
}

// NoReply 无信息
message NoReply {}

// DeviceType 设备类型
message DeviceType {
    // 类型
    DT type = 1;
    // 图标
    string icon = 2;
}

// DT 设备类型枚举
enum DT {
    Unknown = 0;
    Phone   = 1;
    Pad     = 2;
    PC      = 3;
    TV      = 4;
    Car     = 5;
    IoT     = 6;
    AndPad  = 7;
}

// 新关注组件
message Relation {
    // 按钮展示文案：0或者字段不存在：未关注、1：已关注、2：被关注、3：互相关注
    int32 status = 1;
    // 用户关注UP主：0或者字段不存在：未关注、1：已关注
    int32 is_follow = 2;
    // UP主关注用户：0或者字段不存在：未被关注、1：被关注
    int32 is_followed = 3;
}

// SearchReq 历史记录搜索请求参数
message SearchReq {
    // 搜索关键词
    string keyword = 1 [(gogoproto.moretags) = 'validate:"required"'];
    // 第几页
    int64 pn = 2 [(gogoproto.moretags) = 'validate:"gt=0,required"'];
    // 业务类型（视频-archive 直播-live 专栏-article 商品-goods 展演-show）
    string business = 3;
}

// SearchReply 历史记录搜索返回值
message SearchReply {
    // 卡片内容
    repeated CursorItem items = 1;
    // 是否还有更多数据
    bool has_more = 2;
    // 翻页数据
    Page page = 3;
}

// Page 翻页数据
message Page {
    // 当前是第几页
    int64 pn = 1;
    // 总数量
    int64 total = 2;
}

// 秒开参数
message PlayerPreloadParams {
    int64 qn = 1;
    // 功能版本号（秒开用）
    int64 fnver = 2;
    // 功能标识（秒开用）
    int64 fnval = 3;
    // 返回url是否强制使用域名（秒开用）
    int64 force_host = 4;
    // 是否需要4k视频，fourk=1 表示需要，其他表示不需要
    int64 fourk = 5;
}

message ClearReq {
    // 业务类型（视频-archive 直播-live 专栏-article 商品-goods 展演-show）
    string business = 1;
}

// LatestHistoryReq 最新的历史记录列表请求参数
message LatestHistoryReq {
    // 业务类型（视频-archive 直播-live 专栏-article 商品-goods 展演-show）
    string business = 1;
    //秒开参数
    PlayerPreloadParams player_preload = 2;
}

// LatestHistoryReply 最新的历史记录返回值
message LatestHistoryReply {
    // 卡片内容
    CursorItem items = 1;
    // 场景
    string scene = 2;
    // 续播弹窗停留时间
    int64 rtime = 3;
    // 分流上报的标志
    string flag = 4;
}
